hacky fix to get navbar elements vertically aligned

--- a/app/assets/stylesheets/customjane.css
+++ b/app/assets/stylesheets/customjane.css
@@ -30,3 +30,7 @@
 .participant_container {
   margin-top: 55px;
 }
+
+.nav_fix {
+  margin-top: 17px;
+}
